@@ -1,47 +1,62 @@
 import java.util.ArrayList;
 import java.util.Comparator;
+import java.util.HashMap;
 import java.util.Iterator;
 
 public class StudentInformationSystem {
+    private HashMap<Integer, Student> studentMap;
     private ArrayList<Student> students;
 
     public StudentInformationSystem() {
         this.students = new ArrayList<>();
+        this.studentMap = new HashMap<>();
     }
 
     public void addStudent(int ID, String name, double mark) {
-        if(searchStudent(ID) == null) {
-            this.students.add(new Student(ID, name, mark));
+        if(!studentMap.containsKey(ID)) {
+            Student newStudent = new Student(ID, name, mark);
+            this.students.add(newStudent);
+            this.studentMap.put(ID, newStudent);
         } else {
             System.out.println("Student with ID " + ID + " already exists");
         }
     }
 
     public void editStudent(int ID, String newName, double newMark) {
-        for (Student student : students) {
-            if (student.getID() == ID) {
-                student.setName(newName);
-                student.setMark(newMark);
-                break;
-            }
+        Student student = this.studentMap.get(ID);
+        if(student != null) {
+            student.setName(newName);
+            student.setMark(newMark);
+        } else {
+            System.out.println("Student with ID " + ID + " not found");
         }
     }
 
     public void deleteStudent(int ID) {
-//        students.removeIf(student -> student.getID() == ID);
-        for(Iterator<Student> iterator = students.iterator(); iterator.hasNext();) {
-            Student student = iterator.next();
-            if(student.getID() == ID) {
-                iterator.remove();
-                break;
-            }
+        Student student = studentMap.remove(ID);
+        if (student != null) {
+            students.remove(student);
+        } else {
+            System.out.println("Student with ID " + ID + " not found");
         }
     }
 
     public Student searchStudent(int ID) {
-        for(Student student : students) {
-            if (student.getID() == ID) {
-                return student;
+        sortStudents();
+        return binarySearchStudent(ID);
+    }
+
+    private Student binarySearchStudent(int ID) {
+        int left = 0;
+        int right = this.students.size() - 1;
+        while(left <= right) {
+            int mid = (left + right) / 2;
+            if(students.get(mid).getID() == ID) {
+                return this.students.get(mid);
+            } else if(students.get(mid).getID() < ID) {
+                left = mid + 1;
+            } else {
+                right = mid - 1;
             }
         }
         return null;
@@ -78,10 +93,10 @@ public class StudentInformationSystem {
     private ArrayList<Student> merge(ArrayList<Student> left, ArrayList<Student> right) {
         ArrayList<Student> merged = new ArrayList<>();
         while (!left.isEmpty() && !right.isEmpty()) {
-            if (left.get(0).getMark() <= right.get(0).getMark()) {
-                merged.add(left.remove(0));
+            if (left.getFirst().getMark() <= right.getFirst().getMark()) {
+                merged.add(left.removeFirst());
             } else {
-                merged.add(right.remove(0));
+                merged.add(right.removeFirst());
             }
         }
 
